--- a/pypractice2.ipynb
+++ b/pypractice2.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "pypractice2.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/udathateja/my_work/blob/main/pypractice2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -1182,7 +1193,16 @@
         "id": "IY9RU7h7cZDw"
       },
       "source": [
-        ""
+        "#importing libraries\n",
+        "import pandas as pd\n",
+        "import random\n",
+        "\n",
+        "data = pd.DataFrame({\n",
+        "    'C' : [random.choice(('a','b','c')) for i in range(1000)],\n",
+        "    'A' : [random.randint(1,10) for i in range(1000)],\n",
+        "    'B' : [random.randint(1,10) for i in range(1000)]\n",
+        "})\n",
+        "print(data)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1190,13 +1210,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QzjDXkuCcZBa"
+        "id": "QzjDXkuCcZBa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "87504c3f-d7aa-49c8-9b44-254781d8bc7a"
       },
       "source": [
-        ""
+        "data.groupby('C')[\"A\"].mean()\n",
+        "mean1 =data.groupby('C')[\"A\"].mean().rename(\"N\").reset_index()\n",
+        "df_1 = data.merge(mean1)\n",
+        "print(df_1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "     C   A  B         N\n",
+            "0    b   7  8  5.725552\n",
+            "1    b   6  3  5.725552\n",
+            "2    b   8  9  5.725552\n",
+            "3    b  10  9  5.725552\n",
+            "4    b  10  7  5.725552\n",
+            "..  ..  .. ..       ...\n",
+            "995  c   2  6  5.602410\n",
+            "996  c   6  7  5.602410\n",
+            "997  c   9  1  5.602410\n",
+            "998  c   3  8  5.602410\n",
+            "999  c   4  4  5.602410\n",
+            "\n",
+            "[1000 rows x 4 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
