--- a/iris_practice.ipynb
+++ b/iris_practice.ipynb
@@ -6,7 +6,7 @@
       "name": "iris_practice.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPamvYkmfTEJjbyT29LXNav",
+      "authorship_tag": "ABX9TyPxdnCwGjdH0ZiAhC1cqSsi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
         "id": "A6zS4E4woYLA"
       },
       "source": [
-        "X = iris[“data”][:, (2, 3)] # petal length, petal width"
+        "X = iris[\"data\"][:, (2, 3)] # petal length, petal width"
       ],
       "execution_count": null,
       "outputs": []
@@ -67,7 +67,7 @@
         "id": "PQDQhCckoYIK"
       },
       "source": [
-        "y=iris[“target”]"
+        "y=iris[\"target\"]"
       ],
       "execution_count": null,
       "outputs": []
@@ -125,7 +125,7 @@
         "id": "sUw3ox2ZoX5z"
       },
       "source": [
-        "lin_clf = LinearSVC(loss=”hinge”, C=5, random_state=42) #LinearSVC classifier"
+        "lin_clf = LinearSVC(loss=\"hinge\", C=5, random_state=42) #LinearSVC classifier"
       ],
       "execution_count": null,
       "outputs": []
@@ -137,7 +137,7 @@
       },
       "source": [
         "#SVM classifier \n",
-        "svm_clf = SVC(kernel=”linear”, C=C)"
+        "svm_clf = SVC(kernel=\"linear\", C=C)"
       ],
       "execution_count": null,
       "outputs": []
@@ -149,7 +149,7 @@
       },
       "source": [
         "#SGDClassifier \n",
-        "sgd_clf = SGDClassifier(loss=”hinge”, learning_rate=”constant”, eta0=0.001, max_iter=1000, tol=1e-3, random_state=42)"
+        "sgd_clf = SGDClassifier(loss=\"hinge\", learning_rate=\"constant\", eta0=0.001, max_iter=1000, tol=1e-3, random_state=42)"
       ],
       "execution_count": null,
       "outputs": []
@@ -173,9 +173,9 @@
         "id": "Lnt0Eq4soXuv"
       },
       "source": [
-        "print(“LinearSVC: “, lin_clf.intercept_, lin_clf.coef_)\n",
-        "print(“SVC: “, svm_clf.intercept_, svm_clf.coef_)\n",
-        "print(“SGDClassifier(alpha={:.5f}):”.format(sgd_clf.alpha), sgd_clf.intercept_, sgd_clf.coef_)"
+        "print(\"LinearSVC: \", lin_clf.intercept_, lin_clf.coef_)\n",
+        "print(\"SVC: \", svm_clf.intercept_, svm_clf.coef_)\n",
+        "print(\"SGDClassifier(alpha={:.5f}):\".format(sgd_clf.alpha), sgd_clf.intercept_, sgd_clf.coef_)"
       ],
       "execution_count": null,
       "outputs": []
