--- a/iris_practice.ipynb
+++ b/iris_practice.ipynb
@@ -6,7 +6,7 @@
       "name": "iris_practice.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPxdnCwGjdH0ZiAhC1cqSsi",
+      "authorship_tag": "ABX9TyMw/4Aj5VPDrZdqY04gH+o0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,6 +75,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "I4mVByInqEBi"
+      },
+      "source": [
+        "X"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "dC-L63iPoYFU"
       },
       "source": [
@@ -122,10 +133,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sUw3ox2ZoX5z"
+        "id": "JL8qZv5kqXsg"
       },
       "source": [
-        "lin_clf = LinearSVC(loss=\"hinge\", C=5, random_state=42) #LinearSVC classifier"
+        "C = 5\n",
+        "alpha = 1 / (C * len(X))\n",
+        "\n",
+        "lin_clf = LinearSVC(loss=\"hinge\", C=C, random_state=42)\n",
+        "svm_clf = SVC(kernel=\"linear\", C=C)\n",
+        "sgd_clf = SGDClassifier(loss=\"hinge\", learning_rate=\"constant\", eta0=0.001, alpha=alpha, max_iter=1000, tol=1e-3, random_state=42)"
       ],
       "execution_count": null,
       "outputs": []
@@ -133,23 +149,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WttHr9vFoX3S"
+        "id": "7c6NwXU3qmE5"
       },
       "source": [
-        "#SVM classifier \n",
-        "svm_clf = SVC(kernel=\"linear\", C=C)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kZd4DHxooX0g"
-      },
-      "source": [
-        "#SGDClassifier \n",
-        "sgd_clf = SGDClassifier(loss=\"hinge\", learning_rate=\"constant\", eta0=0.001, max_iter=1000, tol=1e-3, random_state=42)"
+        "scaler = StandardScaler()\n",
+        "X_scaled = scaler.fit_transform(X)"
       ],
       "execution_count": null,
       "outputs": []
